# VirtualTouchPadForLinux

./: .gitignore  README.md
.github/workflows/: VirtualTouchPadDriver.yml  VirtualTouchPadServer.yml
AndServer/: .ycm_extra_conf.py  Makefile
AndServer/Include/: MouseClientHandler.h
VirtualMousePadAndroidClient/: build.gradle
VirtualMousePadAndroidClient/app/: build.gradle
VirtualMousePadDriver/: .gitignore  Makefile  virtual_mousepad.c  virtual_mousepad.h  virtual_mousepad_load
VirtualMousePadServer/: CMakeLists.txt
VirtualMousePadServer/Include/: ClientHandler.h
VirtualMousePadServer/Initscripts/: virtual-mousepad-service-deepin
VirtualMousePadServer/Src/: Logger.cpp  Main.cpp  MouseHandler.cpp
VirtualTouchPadAndroidClient/: build.gradle
VirtualTouchPadAndroidClient/app/: build.gradle
VirtualTouchPadAndroidClient/gradle/wrapper/: gradle-wrapper.properties
VirtualTouchPadAndroidQt/VirtualTouchPadAndroid/: CMakeLists.txt  VirtualTouchPadAndroid.pro  main.cpp  mainwidget.h  startscreen.cpp  startscreen.h  startscreen.ui  touchPad.cpp  touchPad.h  touchscreen.cpp  touchscreen.h
VirtualTouchPadAndroidQt/VirtualTouchPadAndroid/android/: AndroidManifest.xml
VirtualTouchPadAndroidQt/VirtualTouchPadAndroidCMake/: CMakeLists.txt  main.cpp  mainwindow.cpp  serverconfig.cpp  serverconfig.h  startscreen.cpp  startscreen.h  touchPad.cpp  touchPad.h  touchscreen.cpp  touchscreen.h
VirtualTouchPadAndroidQt/VirtualTouchPadAndroidCMake/PacketBuilder/: PacketConfigBuilder.h  PacketHeadBuilder.h  PacketMotionBuilder.h  PacketStatusBuilder.h
VirtualTouchPadAndroidQt/VirtualTouchPadAndroidCMake/android/: AndroidManifest.xml
VirtualTouchPadAndroidQt/VirtualTouchPadAndroidQt/: CMakeLists.txt  startscreen.cpp  touchPad.cpp  touchscreen.cpp
VirtualTouchPadAndroidQt/VirtualTouchPadAndroidQt/PacketBuilder/: PacketHeadBuilder.h  PacketMotionBuilder.h  PacketStatusBuilder.h
VirtualTouchPadDriver/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README  description-pak  dkms.conf  format.md  postinstall-pak  test.sh  virtual_touchpad.c  virtual_touchpad.h  virtual_touchpad_load  virtual_touchpad_unload  virtualtouchpaddriver_20181019-1_amd64.deb  vtp-driver.init  vtp-server
VirtualTouchPadDriver/linux/drivers/input/mouse/: Makefile  test.sh  virtual_touchpad.c  virtual_touchpad.h
VirtualTouchPadDriver/linux/drivers/input/mouse/script/: preinst
VirtualTouchPadDriver/script/: postinst  postrm
VirtualTouchPadDriver/scripts/: install.sh  mkdeb.sh  remove.sh
VirtualTouchPadServer/: .gitignore  CMakeLists.txt  Makefile  virtual_touchpad_server.conf.example
VirtualTouchPadServer/INSSCRIPT/: postinst  prerm
VirtualTouchPadServer/Include/: AndroidInputServer.h  ClientHandler.h  InputServer.h  Logger.h  Main.h  MouseHandler.h
VirtualTouchPadServer/Initscripts/: vtp-server
VirtualTouchPadServer/Src/: AndroidInputServer.cpp  ClientHandler.cpp  InputServer.cpp  Main.cpp  MouseClientHandler.cpp  MouseHandler.cpp
VirtualTouchPadServer/src/: InputServer.cpp  Main.cpp  MouseHandler.cpp
test_util/: .gitignore  BasePacketEditWidget.py  HeadWidget.py  Motion.py  StatuWidget.py  main_window.py
(+26 files in other folders)
